tests/parser/fail/self-param-kw.som
"test:
fail-message:
  - contains: define
  - contains: self
"

SelfParamKw = (
  test: self makes: errors = ('yes')
)
